[package]
name = "axum-web-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.35", features = ["serde"] }
#postgres
sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros","chrono","uuid"]}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
#serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

#env
dotenvy = "0.15.7"